[gd_scene load_steps=7 format=2]

[ext_resource path="res://WScenes/worm_anim.tscn" type="PackedScene" id=1]
[ext_resource path="res://WScripts/Giant_Worm.gd" type="Script" id=2]
[ext_resource path="res://Music/zapsplat_cartoon_anime_electricity_burst_arc_001_71511.mp3" type="AudioStream" id=3]
[ext_resource path="res://Music/Blastwave_FX_EarthquakeWithDebris_HV.213.mp3" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=2]
radius = 105.0
height = 0.0

[sub_resource type="Curve2D" id=3]
_data = {
"points": PoolVector2Array( 0.234272, 124.423, -0.234272, -124.423, -226.162, 10.9049, -143.728, 1.74434, 143.728, -1.74434, 26.2866, -252.833, 0.0421438, -140.207, -0.0421438, 140.207, 292.838, 9.90486, 131.18, -2.00226, -131.18, 2.00226, 38.8595, 273.09, -2.66968, 133.286, 2.66968, -133.286, -225.162, 9.90486 )
}

[node name="Giant_Worm" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer2" type="Timer" parent="."]
wait_time = 1.7
one_shot = true

[node name="AttackTimer3" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 18, 0 )
shape = SubResource( 2 )

[node name="YSort" type="YSort" parent="."]

[node name="AnimatedSprite" parent="YSort" instance=ExtResource( 1 )]
position = Vector2( 3, -233 )
scale = Vector2( 2.6, 2.6 )
z_index = 1
animation = "stun"
frame = 1

[node name="TargetPath" type="Path2D" parent="YSort"]
position = Vector2( -38.2773, -35.0964 )
scale = Vector2( 1.41811, 1.29296 )
curve = SubResource( 3 )

[node name="TargetPathFollow" type="PathFollow2D" parent="YSort/TargetPath"]
position = Vector2( -226.162, 10.9049 )
rotation = -1.56287

[node name="stun_noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="burst_noise" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="child_entered_tree" from="." to="." method="_on_Giant_Worm_child_entered_tree"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="AttackTimer2" to="." method="_on_AttackTimer2_timeout"]
[connection signal="timeout" from="AttackTimer3" to="." method="_on_AttackTimer3_timeout"]
